--- a/package.json
+++ b/package.json
@@ -3,36 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-     "vercel-build": "npm install --legacy-peer-deps && next build"
+    "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.10.0",
-    "bcryptjs": "^3.0.2",
+    "axios": "^1.6.8",
+    "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.0",
-    "next": "15.3.4",
+    "mongoose": "^7.6.0",
+    "next": "^13.5.0",
     "next-auth": "^4.24.11",
-    "nodemailer": "^7.0.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hot-toast": "^2.5.2",
-    "react-icons": "^5.5.0"
+    "nodemailer": "^6.9.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.10.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^20",
-    "@types/nodemailer": "^6.4.17",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.4",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "@eslint/eslintrc": "^2.1.3",
+    "@tailwindcss/postcss": "^1.1.0",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "^20.8.10",
+    "@types/nodemailer": "^6.4.7",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^13.5.4",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.4.5"
   }
 }
